--- a/tools/testing/selftests/nolibc/Makefile
+++ b/tools/testing/selftests/nolibc/Makefile
@@ -119,30 +119,32 @@ REPORT  ?= awk '/\[OK\][\r]*$$/{p++} /\[FAIL\][\r]*$$/{if (!f) printf("\n"); f++
 
 help:
 	@echo "Supported targets under selftests/nolibc:"
-	@echo "  all          call the \"run\" target below"
-	@echo "  help         this help"
-	@echo "  sysroot      create the nolibc sysroot here (uses \$$ARCH)"
-	@echo "  nolibc-test  build the executable (uses \$$CC and \$$CROSS_COMPILE)"
-	@echo "  libc-test    build an executable using the compiler's default libc instead"
-	@echo "  run-user     runs the executable under QEMU (uses \$$XARCH, \$$TEST)"
-	@echo "  initramfs    prepare the initramfs with nolibc-test"
-	@echo "  defconfig    create a fresh new default config (uses \$$XARCH)"
-	@echo "  kernel       (re)build the kernel with the initramfs (uses \$$XARCH)"
-	@echo "  run          runs the kernel in QEMU after building it (uses \$$XARCH, \$$TEST)"
-	@echo "  rerun        runs a previously prebuilt kernel in QEMU (uses \$$XARCH, \$$TEST)"
-	@echo "  clean        clean the sysroot, initramfs, build and output files"
+	@echo "  all                    call the \"run\" target below"
+	@echo "  help                   this help"
+	@echo "  sysroot                create the nolibc sysroot here (uses \$$ARCH)"
+	@echo "  nolibc-test            build the executable (uses \$$CC and \$$CROSS_COMPILE)"
+	@echo "  libc-test              build an executable using the compiler's default libc instead"
+	@echo "  run-user               runs the executable under QEMU (uses \$$XARCH, \$$TEST)"
+	@echo "  initramfs              prepare the initramfs with nolibc-test"
+	@echo "  nolibc-test-config     create a fresh new \$$(CONFIG) config with extra options from \$$NOLIBC_TEST_CONFIG files (uses \$$XARCH)"
+	@echo "  defconfig              do nolibc-test-config with default config (uses \$$XARCH)"
+	@echo "  kernel                 (re)build the kernel with the initramfs (uses \$$XARCH)"
+	@echo "  run                    runs the kernel in QEMU after building it (uses \$$XARCH, \$$TEST)"
+	@echo "  rerun                  runs a previously prebuilt kernel in QEMU (uses \$$XARCH, \$$TEST)"
+	@echo "  clean                  clean the sysroot, initramfs, build and output files"
 	@echo ""
 	@echo "The output file is \"run.out\". Test ranges may be passed using \$$TEST."
 	@echo ""
 	@echo "Currently using the following variables:"
-	@echo "  ARCH          = $(ARCH)"
-	@echo "  XARCH         = $(XARCH)"
-	@echo "  CROSS_COMPILE = $(CROSS_COMPILE)"
-	@echo "  CC            = $(CC)"
-	@echo "  OUTPUT        = $(OUTPUT)"
-	@echo "  TEST          = $(TEST)"
-	@echo "  QEMU_ARCH     = $(if $(QEMU_ARCH),$(QEMU_ARCH),UNKNOWN_ARCH) [determined from \$$XARCH]"
-	@echo "  IMAGE_NAME    = $(if $(IMAGE_NAME),$(IMAGE_NAME),UNKNOWN_ARCH) [determined from \$$XARCH]"
+	@echo "  ARCH                   = $(ARCH)"
+	@echo "  XARCH                  = $(XARCH)"
+	@echo "  CROSS_COMPILE          = $(CROSS_COMPILE)"
+	@echo "  CC                     = $(CC)"
+	@echo "  OUTPUT                 = $(OUTPUT)"
+	@echo "  TEST                   = $(TEST)"
+	@echo "  QEMU_ARCH              = $(if $(QEMU_ARCH),$(QEMU_ARCH),UNKNOWN_ARCH) [determined from \$$XARCH]"
+	@echo "  IMAGE_NAME             = $(if $(IMAGE_NAME),$(IMAGE_NAME),UNKNOWN_ARCH) [determined from \$$XARCH]"
+	@echo "  NOLIBC_TEST_CONFIG     = $(strip $(foreach c,$(NOLIBC_TEST_CONFIG),$(wildcard $(CURDIR)/configs/$c))) [determined from \$$XARCH]"
 	@echo ""
 
 all: run
